removed source border and added additional media queries to resolve bugs on smaller screen sizes

--- a/main.css
+++ b/main.css
@@ -159,7 +159,6 @@ canvas {
 	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 	position: relative;
 	border-radius: 10px;
-	border: 4px solid darkcyan;
 	background-image: url("./aquacircle.gif");
 	background-position: center;
 	-webkit-transition-property: all;
@@ -192,7 +191,6 @@ canvas {
 .hvr-ri:focus,
 .hvr-ri:active {
 	color: white;
-	border: 4px solid white;
 	border-radius: 10px;
 }
 
@@ -926,5 +924,11 @@ canvas {
 @media screen and (max-width: 408px) {
 	.project-icon {
 		font-size: 128px;
+	}
+	#about-text {
+		width: 220px;
+	}
+	h2 {
+		font-size: 36px;
 	}
 }
